[package]
name = "raspi-rss-reader"
version = "0.1.0"
authors = ["Lucas Micheloni <lucas.michelonidesouza@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies.sdl2]
version = "0.32"
default-features = false
features = ["ttf","image"]

[dependencies.rss]
version = "1.8.0"
features = ["from_url"]
